[gd_scene load_steps=14 format=3 uid="uid://bu7cjyo7wkd8u"]

[ext_resource type="Script" path="res://Level.gd" id="1_k5a44"]
[ext_resource type="Texture2D" uid="uid://cjeu22dnnw1ml" path="res://zuma_bg.png" id="2_i4jxr"]
[ext_resource type="Script" path="res://Path2D.gd" id="3_lnqjk"]
[ext_resource type="PackedScene" uid="uid://12fhuuwwpgh2" path="res://BallShooter.tscn" id="4_g3whm"]
[ext_resource type="Script" path="res://addons/shaker/shaker.gd" id="5_7ndgl"]
[ext_resource type="Script" path="res://EndCountLabel.gd" id="6_v1a0a"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="7_vnsvs"]
[ext_resource type="Script" path="res://GroupManager.gd" id="8_ge1iu"]

[sub_resource type="Curve2D" id="Curve2D_x5r2q"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 480, 431, -308.005, -372.222, 308.005, 372.222, 2976, 488, 372.222, -236.652, -372.222, 236.652, 2986, 1509, 242.598, 215.246, -242.598, -215.246, 718, 1402, -268.761, 134.38, 268.761, -134.38, 840, 689, -292.545, -271.139, 292.545, 271.139, 2712, 637, 248.544, -255.679, -248.544, 255.679, 2835, 1313, 0, 0, 0, 0, 927, 1204)
}
point_count = 8

[sub_resource type="LabelSettings" id="LabelSettings_qgwiq"]
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_s6xxj"]
font_size = 50
font_color = Color(0.2, 0.188235, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_e5vd8"]
variation_embolden = 1.2
spacing_glyph = 2

[sub_resource type="LabelSettings" id="LabelSettings_qjwhu"]
font = SubResource("FontVariation_e5vd8")
font_size = 74
font_color = Color(0.878431, 0.784314, 0.00784314, 1)
shadow_size = 11
shadow_color = Color(0, 0, 0, 1)

[node name="Level" type="Node2D"]
script = ExtResource("1_k5a44")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(1653.22, 972)
scale = Vector2(1.88356, 2.11667)
texture = ExtResource("2_i4jxr")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-180, 38)
curve = SubResource("Curve2D_x5r2q")
script = ExtResource("3_lnqjk")

[node name="BallShooter" parent="." instance=ExtResource("4_g3whm")]
position = Vector2(1860, 1028)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1678, 952)

[node name="Shaker" type="Node" parent="." node_paths=PackedStringArray("target_node")]
script = ExtResource("5_7ndgl")
target_node = NodePath("../Camera2D")
target_property = &"offset"
max_value = 10.0
constant = true

[node name="SeedLabel" type="Label" parent="."]
offset_left = 3197.0
offset_top = 1823.0
offset_right = 3246.0
offset_bottom = 1856.0
text = "Seed"
label_settings = SubResource("LabelSettings_qgwiq")

[node name="EndCountLabel" type="Label" parent="."]
offset_left = 709.0
offset_top = 1030.0
offset_right = 830.0
offset_bottom = 1102.0
text = "‚Üê 56"
label_settings = SubResource("LabelSettings_s6xxj")
script = ExtResource("6_v1a0a")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 43.0
offset_top = 35.0
offset_right = 130.0
offset_bottom = 107.0
text = "51300"
label_settings = SubResource("LabelSettings_qjwhu")
script = ExtResource("7_vnsvs")

[node name="GroupManager" type="Node" parent="."]
script = ExtResource("8_ge1iu")
